--- a/.htaccess
+++ b/.htaccess
@@ -265,8 +265,8 @@ AddType application/x-shockwave-flash       swf
   ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
 
 # CSS and JavaScript
-  ExpiresByType text/css                  "access plus 1 year"
-  ExpiresByType application/javascript    "access plus 1 year"
+  ExpiresByType text/css                  "access plus 1 week"
+  ExpiresByType application/javascript    "access plus 1 week"
 
 </IfModule>
 
